--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,4 +35,8 @@ dependencies {
     compile('com.google.apis:google-api-services-sheets:v4-rev464-1.22.0') {
         exclude group: 'org.apache.httpcomponents'
     }
+
+    configurations.all {
+        resolutionStrategy.force 'com.google.code.findbugs:jsr305:1.3.9'
+    }
 }
